--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: gmat_dart
 description: A starting point for Dart libraries or applications.
-version: 1.0.0
+version: 0.1.0
 # repository: https://github.com/my_org/my_repo
+publish_to: 'none'
 
 environment:
   sdk: ^3.8.1
@@ -11,5 +12,5 @@ dependencies:
   # path: ^1.8.0
 
 dev_dependencies:
-  lints: ^5.0.0
+  lints: ^6.0.0
   test: ^1.24.0
